--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "qrcode-cafe",
+  "name": "cafe-ordering",
   "version": "1.0.0",
-  "description": "",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.2",
+    "sqlite3": "^5.1.6"
   }
 }
