--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "cafe-pos",
+  "name": "cafe-ordering",
   "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^4.18.2",
-    "sqlite3": "^5.1.6",
-    "exceljs": "^4.4.0"
+    "sqlite3": "^5.1.6"
   }
 }
